--- a/src/sass/info/main.scss
+++ b/src/sass/info/main.scss
@@ -2134,6 +2134,43 @@ h5 {
       }
     }
   }
+
+
+  &-mobile {
+    .faq-item {
+      padding-top: 30px;
+      padding-bottom: 30px;
+      &-title {
+        display: flex;
+        align-items: center;
+        gap: 9px;
+        color: #143054;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+
+        svg {
+          width: 26px;
+          height: 26px;
+          color: #24AEA6;
+        }
+      }
+
+      &-info {
+        margin-top: 20px;
+        img {
+          width: 100%;
+          margin-bottom: 20px;
+        }
+
+        color: #5B6283;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 180%; /* 28.8px */
+      }
+    } 
+  }
 }
 
 body {
