--- a/src/sass/info/mobile.scss
+++ b/src/sass/info/mobile.scss
@@ -521,4 +521,14 @@
   .price-item {
     min-height: 420px;
   }
+
+  .full-control {
+    h5 {
+      margin-bottom: 32px;
+    }
+  }
+
+  .price-subtitle {
+    margin-bottom: 40px;
+  }
 }
