--- a/src/sass/info/variables.scss
+++ b/src/sass/info/variables.scss
@@ -100,6 +100,8 @@ html {
   --algorithms-item-p: #5B6283;
   --algorithms-item-top: #5B6283;
   --algorithms-item-top-bg: #EAECF5;
+  --reviews-slider-item-hover-bg: #fff;
+  --reviews-slider-item-hover-svg: #395FC2;
 
   &[data-theme=dark] {
     --htmlBg: linear-gradient(0deg, rgba(41, 42, 49, 0.40) 0%, rgba(41, 42, 49, 0.40) 100%), linear-gradient(90deg, rgba(173, 0, 255, 0.10) 0%, rgba(11, 55, 201, 0.10) 50.47%, rgba(0, 216, 255, 0.10) 100%), #242734;
@@ -193,6 +195,8 @@ html {
     --algorithms-item-p: #fff;
     --algorithms-item-top: #ACBDD7;
     --algorithms-item-top-bg: rgba(255, 255, 255, 0.05);    
+    --reviews-slider-item-hover-bg: #454F62;
+    --reviews-slider-item-hover-svg: #66D2F9;
   } 
 
   &[data-theme=light] {
@@ -288,6 +292,8 @@ html {
     --algorithms-item-p: #5B6283;
     --algorithms-item-top: #5B6283;
     --algorithms-item-top-bg: #EAECF5;
+    --reviews-slider-item-hover-bg: #fff;
+    --reviews-slider-item-hover-svg: #395FC2;
   }
 }
 
@@ -383,6 +389,8 @@ html {
     --algorithms-item-p: #fff;
     --algorithms-item-top: #ACBDD7;
     --algorithms-item-top-bg: rgba(255, 255, 255, 0.05);
+    --reviews-slider-item-hover-bg: #454F62;
+    --reviews-slider-item-hover-svg: #66D2F9;
   }
 }
 
@@ -478,5 +486,7 @@ html {
     --algorithms-item-p: #5B6283;
     --algorithms-item-top: #5B6283;
     --algorithms-item-top-bg: #EAECF5;
+    --reviews-slider-item-hover-bg: #fff;
+    --reviews-slider-item-hover-svg: #395FC2;
   }
 }
