--- a/src/sass/info/main.scss
+++ b/src/sass/info/main.scss
@@ -2202,6 +2202,61 @@ h5 {
   }
 }
 
+.profit {
+  text-align: center;
+  background: var(--profit-bg);
+
+  h2 {
+    margin-top: 80px;
+    padding-bottom: 0;
+    margin-bottom: 16px;
+    color: #fff;
+  }
+  h5 {
+    margin-bottom: 42px;
+    color: #fff;
+
+  }
+  &-item {
+    max-width: 1083px;
+    margin: 0 auto 60px;
+    position: relative;
+    padding-bottom: 60px;
+  }
+
+  img {
+    width: 100%;
+  }
+
+   &-img {
+      max-width: 484.5px;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+
+    &-large {
+      max-width: 740px;
+      display: block;
+      margin-left: 102px;
+    }
+   }
+
+  p {
+    color: #8F99BE;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%; 
+    margin-top: 18px;
+  }
+}
+
+.features-tabs .tabs-content.tabs-content-left {
+  img {
+    margin-left: 0;
+  }
+}
+
 body {
   overflow-x: hidden;
   color: var(--textColor);
