--- a/src/sass/info/main.scss
+++ b/src/sass/info/main.scss
@@ -1970,9 +1970,9 @@ h5 {
       .about-us-item-content {
         display: block;
         opacity: 1;
-        animation-name: fadeIn;
-        animation-duration: .7s;
-        animation-fill-mode: both;
+        // animation-name: fadeIn;
+        // animation-duration: .7s;
+        // animation-fill-mode: both;
         z-index: 2;
       }
     }
