fix about us part -7

--- a/src/sass/info/main.scss
+++ b/src/sass/info/main.scss
@@ -1956,7 +1956,7 @@ h5 {
       }
     }
 
-     &.active-block {
+     &.active {
       .about-us-item-card {
         background: var(--about-us-item-card);
         border-radius: 14px;
